<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.pocket.PasswordEnter"
    tools:ignore="MergeRootFrame" >

    <Button
        android:id="@+id/ok"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/enterPass"
        android:layout_alignBottom="@+id/enterPass"
        android:layout_toRightOf="@+id/enterPass"
        android:text="@string/go" />

    <EditText
        android:id="@+id/enterName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/enterPass"
        android:layout_alignParentTop="true"
        android:layout_marginTop="110dp"
        android:ems="10"
        android:hint="@string/UserName"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/enterPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="32dp"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/forgtPsswrd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/enterName"
        android:layout_below="@+id/ok"
        android:layout_marginTop="60dp"
        android:text="@string/forgot_psswrd" />

</RelativeLayout>